# openinfer

./: .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  hawk.toml  pr-body-dsv2lite-http-reliability-gate.md  rust-toolchain.toml  rustfmt.toml  taplo.toml  typos.toml
openinfer-comm/: Cargo.toml  NOTICE.md  README.md  pyproject.toml
openinfer-comm/src/: ep_backend.rs  error.rs  lib.rs
openinfer-comm/tests/: pplx_roundtrip.rs
openinfer-core/: Cargo.toml
openinfer-core/src/: cpu_topology.rs  cuda_graph.rs  engine.rs  ffi.rs  kv_cache.rs  kv_pool.rs  lib.rs  logging.rs  ops.rs  page_pool.rs  parallel.rs  sampler.rs  tensor.rs  tracing.rs  weight_loader.rs
openinfer-core/tests/: weight_loader_gpu.rs
openinfer-deepseek-v2-lite/: Cargo.toml
openinfer-deepseek-v2-lite/src/: attribution.rs  config.rs  device.rs  engine.rs  ep.rs  host_ops.rs  lib.rs  model.rs  nccl_backend.rs  runtime.rs  scheduler.rs  weights.rs
openinfer-deepseek-v2-lite/tests/: e2e_ep2.rs
openinfer-engine/: Cargo.toml
openinfer-engine/src/: engine.rs  lib.rs  parallel.rs  sampler.rs  tracing_state.rs
openinfer-glm52/: Cargo.toml
openinfer-glm52/src/: abprobe.rs  arena.rs  bookend.rs  bookend_oracle_gate.rs  config.rs  decode.rs  decode_meta.rs  deepep.rs  dense.rs  dspark.rs  dspark_slot.rs  dspark_smoke.rs  dspark_test_support.rs  fp8.rs  indexer.rs  indexer_oracle_gate.rs  indexer_smoke.rs  kernel_bench.rs  layer.rs  layer_ep8_oracle_gate.rs  layer_oracle_gate.rs  lib.rs  linear.rs  mla_decode.rs  mla_front.rs  mla_oracle_gate.rs  model.rs  moe_decode.rs  moe_deepep.rs  moe_ep4.rs  moe_ep8.rs  moe_ep_wo.rs  moe_gemm.rs  moe_tp.rs  moe_tp8.rs  pp.rs  prefill_tp.rs  remote.rs  rows.rs  runner.rs  (+3 more)
openinfer-glm52/tests/: checkpoint.rs  mla_decode_oracle.rs  mla_layout_probe.rs  moe_decode_oracle.rs  pp_p2p_spine.rs
openinfer-higgs-audio/: Cargo.toml
openinfer-higgs-audio/src/: backbone.rs  config.rs  lib.rs  weights.rs
openinfer-higgs-audio/tests/: backbone_parity.rs
openinfer-kernels/: Cargo.toml  KERNELS.md  build.rs
openinfer-kernels/examples/: triton_cubin_tvm_ffi.rs
openinfer-kernels/src/: exportable.rs  ffi.rs  flashinfer_gdn.rs  forward_pass.rs  gpu_buffers.rs  lib.rs  ops.rs  tensor.rs  triton_cubin.rs  typed_ops.rs
openinfer-kernels/tests/: batch_invariance_gemm.rs  deepseek_compressor_nonoverlap.rs  deepseek_compressor_overlap.rs  deepseek_cutedsl_indexer.rs  deepseek_indexer_topk.rs  ffi_exception_catch.rs  glm52_flashinfer_sparse_smoke.rs  glm52_flashmla_sparse_oracle.rs  glm52_indexer_smoke.rs  glm52_moe_ep_wo_smoke.rs  glm52_router_smoke.rs  glm52_sparse_mla.rs  glm52_vocab_parallel_smoke.rs  glm52_weights_proj_smoke.rs  strided_batched_gemm.rs
openinfer-kimi-k2/: Cargo.toml
openinfer-kimi-k2/src/: batch_decode_trace.rs  config.rs  kernel_report.rs  lib.rs  runner.rs  typed_scratch.rs  weights.rs
openinfer-kimi-k2/tests/: vllm_golden_gate.rs
openinfer-kv-cache/: Cargo.toml
openinfer-kv-cache/src/: buffer.rs  layout.rs  lib.rs  manager.rs  pool.rs  view.rs
openinfer-kv-cache/tests/: lifecycle.rs  restore_commit.rs
openinfer-kv-offload/: Cargo.toml
openinfer-kv-offload/src/: engine.rs  external.rs  lib.rs  vllm_hash.rs
openinfer-kv-offload/tests/: cpu_roundtrip.rs
openinfer-qwen3/: Cargo.toml
openinfer-qwen3-4b-dflash/: Cargo.toml
openinfer-qwen3-4b-dflash/src/: batch_buffers.rs  batch_forward.rs  config.rs  executor.rs  forward.rs  lib.rs  scheduler.rs  weights.rs
openinfer-qwen3-4b-dflash/tests/: hf_golden_gate.rs
openinfer-qwen3/kernel_manifests/: qwen3.toml
openinfer-qwen3/src/: batch_decode.rs  batch_decode_buffers.rs  batch_decode_dag.rs  batch_decode_trace.rs  config.rs  dflash.rs  dspark.rs  eagle3.rs  executor.rs  green_ctx.rs  kernel_bench.rs  kernel_plan.rs  lib.rs  lora.rs  prefill.rs  scheduler.rs  speculative.rs  split_kv.rs  unified_forward.rs  verify_graph.rs  weights.rs
openinfer-qwen3/tests/: batch_invariance_attention_path.rs  batch_invariance_decode_gemm_graph.rs  batch_invariance_decode_splitkv_graph.rs  batch_invariance_endtoend.rs  batch_invariance_envelope.rs  batch_invariance_output.rs  batch_invariance_reject.rs  batch_invariance_unified.rs  cached_tokens_usage.rs  cancellation_sweep.rs  context_window.rs  context_window_in_window.rs  dflash_sampled_equivalence.rs  dflash_speculative_gate.rs  dflash_speculative_perf.rs  eagle3_gsm8k_perf.rs  eagle3_speculative_gate.rs  eagle3_speculative_perf.rs  hf_golden_gate.rs  http_cancellation.rs  kv_offload_cpu_hit.rs  lora_golden_gate.rs  lora_smoke.rs  prefix_cache.rs  report_gemm_faithful.rs  sampling_behavior.rs  scheduler_robustness.rs  tp_concurrent_decode.rs
openinfer-qwen35/: Cargo.toml
openinfer-qwen35-4b/: Cargo.toml
openinfer-qwen35-4b/benches/: qwen35_ops.rs
openinfer-qwen35-4b/src/: batch_decode.rs  batch_decode_graph.rs  config.rs  decode_buffers.rs  dflash.rs  executor.rs  kernel_plan.rs  lib.rs  logprobs.rs  ops.rs  prefill.rs  prefill_buffers.rs  prefill_verify.rs  recurrent.rs  recurrent_state.rs  scheduler.rs  speculative.rs  speculative_tests.rs  tp_executor.rs  unified_forward.rs  verify_buffers.rs  weights.rs
openinfer-qwen35-4b/tests/: chunked_prefill.rs  dflash_speculative_gate.rs  dflash_speculative_perf.rs  e2e_scheduler.rs  hf_golden_gate.rs  sampling_behavior.rs  serving_tp2.rs  speculative_verify.rs
openinfer-qwen35/src/: batch_decode_graph.rs  decode_buffers.rs  executor.rs  ffi.rs  lib.rs  weights.rs
openinfer-qwen35/tests/: chunked_prefill.rs  e2e_scheduler.rs  hf_golden_gate.rs  sampling_behavior.rs  serving_tp2.rs
openinfer-sample/: Cargo.toml
openinfer-sample/benches/: select_batch.rs
openinfer-sample/src/: lib.rs
openinfer-sample/tests/: gpu_logprobs.rs  logprobs_golden.rs  (+1 more)
openinfer-server/: Cargo.toml
openinfer-sim/: Cargo.toml
openinfer-vllm-frontend/: Cargo.toml
openinfer-vllm-support/: Cargo.toml
pegainfer-comm/: Cargo.toml
pegainfer-kimi-k2/: Cargo.toml
pegainfer-sim/: Cargo.toml
pegainfer-vllm-frontend/: Cargo.toml
(+1083 files in other folders)
