[package]
autobenches = false
autobins = false
autotests = false
edition = "2024"
license = "Apache-2.0"
name = "openinfer-deepseek-v2-lite"
version = "0.1.0"

[features]
deepseek-v2-lite = [
  "dep:openinfer-kernels",
  "openinfer-kernels/deepseek-v2-lite",
]
default = []

[dependencies]
anyhow = { workspace = true }
cudarc = { workspace = true }
half = { workspace = true }
hex = { workspace = true }
libloading = "0.9"
log = { workspace = true }
memmap2 = { workspace = true }
nvtx = { workspace = true }
openinfer-core = { workspace = true }
openinfer-engine = { workspace = true }
openinfer-kernels = { workspace = true, optional = true }
safetensors = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
vllm-text = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true

[[test]]
name = "e2e_ep2"
path = "tests/e2e_ep2.rs"
required-features = ["deepseek-v2-lite"]

[[bin]]
name = "dsv2_lite_ep2_decode_attribution"
path = "src/bin/dsv2_lite_ep2_decode_attribution.rs"
required-features = ["deepseek-v2-lite"]
