[package]
name = "openinfer-engine"
license = "Apache-2.0"
version = "0.1.0"
edition = "2024"

[dependencies]
metrics = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }

[lints]
workspace = true
