[package]
edition = "2024"
license = "Apache-2.0"
name = "openinfer-engine"
version = "0.1.0"

[dependencies]
fastrace = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true, features = ["sync"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }

[lints]
workspace = true
