[package]
autobenches = false
edition = "2024"
license = "Apache-2.0"
name = "openinfer-glm52"
version = "0.1.0"

[dependencies]
anyhow = { workspace = true }
bincode = { workspace = true, features = ["serde"] }
bytesize = { workspace = true }
crossbeam-channel = { workspace = true }
cudarc = { workspace = true }
half = { workspace = true }
log = { workspace = true }
memmap2 = { workspace = true }
openinfer-core = { workspace = true }
openinfer-kernels = { workspace = true, features = ["glm52"] }
openinfer-kv-cache = { workspace = true }
openinfer-kv-offload = { workspace = true }
openinfer-sample = { workspace = true }
safetensors = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
hex = { workspace = true }
sha2 = { workspace = true }

[lints]
workspace = true
