[package]
edition = "2024"
license = "Apache-2.0"
name = "openinfer-kernels"
version = "0.1.0"

[dependencies]
anyhow = { workspace = true }
cudarc = { workspace = true }
half = { workspace = true }
serde = { workspace = true }
tvm-ffi = { version = "0.1.0-alpha.0", optional = true }

[build-dependencies]
cc = { workspace = true }
openinfer-build = { workspace = true }

[features]
default = []
tvm-ffi-triton-cubin = ["dep:tvm-ffi", "qwen35-4b"]
# Qwen3.5 Triton AOT kernels (GDR chunkwise prefill) — the only feature that
# needs Python + Triton at build time.
deepseek-v2-lite = []
qwen35-4b = []
# Shared MoE/MLA third-party substrate: DeepEP, DeepGEMM, and FlashMLA.
glm52 = ["moe"]
kimi-k2 = ["moe"]
moe = []

[[example]]
name = "triton_cubin_tvm_ffi"
required-features = ["tvm-ffi-triton-cubin"]

[lints]
workspace = true
