[package]
autobenches = false
edition = "2024"
license = "Apache-2.0"
name = "openinfer-qwen3"
version = "0.1.0"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, optional = true }
comfy-table = { workspace = true, optional = true }
crossbeam-channel = { workspace = true }
cudarc = { workspace = true }
fastrace = { workspace = true }
half = { workspace = true }
hex = { workspace = true, optional = true }
log = { workspace = true }
openinfer-bench = { workspace = true, optional = true }
openinfer-core = { workspace = true }
openinfer-cupti = { workspace = true, optional = true }
openinfer-kernels = { workspace = true }
openinfer-kv-cache = { workspace = true }
openinfer-kv-offload = { workspace = true }
openinfer-sample = { workspace = true }
rand = { workspace = true }
safetensors = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true, optional = true }
tokio = { workspace = true, features = ["sync"] }
toml = { workspace = true, optional = true }

[features]
kernel-call-trace = ["openinfer-core/kernel-call-trace"]
kernel-report = [
  "dep:clap",
  "dep:comfy-table",
  "dep:hex",
  "dep:openinfer-bench",
  "dep:openinfer-cupti",
  "dep:sha2",
  "dep:toml",
  "kernel-call-trace",
]
test-fixtures = []

[dev-dependencies]
openinfer-qwen3 = { workspace = true, features = ["test-fixtures"] }
openinfer-vllm-support = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
vllm-text = { workspace = true }

[[bin]]
name = "qwen3_kernel_report"
path = "src/bin/qwen3_kernel_report.rs"
required-features = ["kernel-report"]

[[bin]]
name = "qwen3_model_report"
path = "src/bin/qwen3_model_report.rs"
required-features = ["kernel-report"]

[lints]
workspace = true
