[package]
name = "openinfer-qwen35-4b"
license = "Apache-2.0"
version = "0.1.0"
edition = "2024"
autobenches = false

[dependencies]
openinfer-core = { workspace = true }
openinfer-kernels = { workspace = true }
anyhow = { workspace = true }
cudarc = { workspace = true }
fastrace = { workspace = true }
half = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
safetensors = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["sync"] }

[dev-dependencies]
criterion = { workspace = true }
openinfer-vllm-support = { workspace = true }
sha2 = { workspace = true }
vllm-text = { workspace = true }

[lints]
workspace = true

[[bench]]
name = "qwen35_ops"
harness = false
