[package]
autobenches = false
edition = "2024"
license = "Apache-2.0"
name = "openinfer-sample"
version = "0.1.0"

[dependencies]
anyhow = { workspace = true }
cudarc = { workspace = true }
half = { workspace = true }
openinfer-engine = { workspace = true }
openinfer-kernels = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[lints]
workspace = true

[[bench]]
harness = false
name = "select_batch"
