[package]
autobenches = false
name = "openinfer-server"
license = "Apache-2.0"
default-run = "openinfer"
version = "0.1.0"
edition = "2024"

[lib]
name = "openinfer"
path = "src/lib.rs"

[[bin]]
name = "openinfer"
path = "src/main.rs"

[[bin]]
name = "bench_serving"
path = "src/bin/bench_serving/main.rs"

[[bin]]
name = "glm52_step_bench"
path = "src/bin/glm52_step_bench.rs"
required-features = ["glm52"]

[dependencies]
openinfer-core = { workspace = true }
openinfer-deepseek-v2-lite = { workspace = true, optional = true }
openinfer-glm52 = { workspace = true, optional = true }
openinfer-kimi-k2 = { workspace = true, optional = true }
openinfer-qwen3 = { workspace = true, optional = true }
openinfer-qwen35-4b = { workspace = true, optional = true }
openinfer-vllm-frontend = { workspace = true }
openinfer-vllm-support = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
comfy-table = { workspace = true }
cudarc = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
tokio-util = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
vllm-text = { workspace = true }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"

[features]
# Qwen3-4B is the default model line: pure Rust + CUDA, no Python at build time.
default = ["qwen3"]
qwen3 = ["dep:openinfer-qwen3"]
# Qwen3.5 pulls in the Triton AOT kernels (Python + Triton at build time).
qwen35-4b = ["dep:openinfer-qwen35-4b", "openinfer-qwen35-4b/qwen35-4b"]
deepseek-v2-lite = ["dep:openinfer-deepseek-v2-lite", "openinfer-deepseek-v2-lite/deepseek-v2-lite"]
glm52 = ["dep:openinfer-glm52"]
kimi-k2 = ["dep:openinfer-kimi-k2", "openinfer-kimi-k2/kimi-k2"]

[lints]
workspace = true
