[package]
name = "openinfer-sim"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "openinfer-sim"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
openinfer-engine = { workspace = true }
openinfer-vllm-frontend = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[dev-dependencies]
reqwest = { workspace = true, features = ["json"] }
serde_json = { workspace = true }
tokio-util = { workspace = true }

[lints]
workspace = true
