[package]
name = "openinfer-vllm-frontend"
license = "Apache-2.0"
version = "0.1.0"
edition = "2024"

[dependencies]
openinfer-engine = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
log = { workspace = true }
rmp-serde = { workspace = true }
rmpv = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }
tower = { workspace = true, features = ["util"] }
uuid = { workspace = true, features = ["v4"] }
vllm-engine-core-client = { workspace = true }
vllm-server = { workspace = true }
zeromq = { workspace = true }

[lints]
workspace = true
