[package]
name = "pegainfer-comm"
edition = "2024"
publish = false
description = "PegaInfer comm-backend public surface (EP all-to-all first; future data-movement surfaces later). Requires CUDA, RDMA Verbs, and GDRCopy on the host."

[dependencies]
thiserror = { workspace = true }
anyhow = { workspace = true }
p2p-all-to-all = { path = "crates/pegainfer-comm-p2p-all-to-all", package = "pegainfer-comm-p2p-all-to-all", features = ["hw-rdma"] }
fabric-lib = { path = "crates/pegainfer-comm-fabric-lib", package = "pegainfer-comm-fabric-lib", features = ["hw-rdma"] }
cuda-lib = { path = "crates/pegainfer-comm-cuda-lib", package = "pegainfer-comm-cuda-lib", features = ["hw-cuda"] }
