[package]
name = "pegainfer-kimi-k2"
version = "0.1.0"
edition = "2024"
autobenches = false
autobins = false
autotests = false

[dependencies]
anyhow = { workspace = true }
cudarc = { workspace = true, features = ["nccl"] }
half = { workspace = true }
memmap2 = { workspace = true }
pegainfer-core = { workspace = true }
pegainfer-kernels = { workspace = true }
safetensors = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
