[package]
edition = "2024"
name = "openinfer-comm-cuda-lib"
license = "Apache-2.0"
publish = false

[features]
# Hardware backend feature: when on, the CUDA wrapper implementation is built
# and FFI types are re-exported. When off (default), this crate compiles to a
# near-empty shell exposing only the `HW_CUDA_ENABLED` diagnostic marker. The
# abstract OpenInfer-facing surface lives in the top-level `openinfer-comm`
# crate, NOT here.
default = []
hw-cuda = [
    "cuda-sys/system-bindings",
    "cudart-sys/system-bindings",
    "gdrapi-sys/system-bindings",
]

[dependencies]
cuda-sys = { path = "../openinfer-comm-cuda-sys", package = "openinfer-comm-cuda-sys" }
cudart-sys = { path = "../openinfer-comm-cudart-sys", package = "openinfer-comm-cudart-sys" }
gdrapi-sys = { path = "../openinfer-comm-gdrapi-sys", package = "openinfer-comm-gdrapi-sys" }

libc = { workspace = true }
thiserror = { workspace = true }
bincode = { workspace = true, features = ["derive", "alloc"] }

[dev-dependencies]
proc-lib = { path = "../openinfer-comm-proc-lib", package = "openinfer-comm-proc-lib", features = ["hw-cuda"] }
